# autonomous-warehouse-inspection

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build_and_coveralls.yml  cmake.yml  ros_build.yml
UML/Final/: ClassDiagram.png:Zone.Identifier
include/: beacon.h  beacon.hpp  botInspector.h  botInspector.hpp
install/: local_setup.sh  setup.sh
install/autonomous-warehouse-inspection/share/autonomous-warehouse-inspection/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autonomous-warehouse-inspection/share/autonomous-warehouse-inspection/maps/: map_mini.pgm
launch/: aruco_launch.py  mainLaunch.launch.py
log/: latest_build  latest_test
maps/: map_mini.yaml
results/: cppcheck.txt  cpplint.txt
ros2_aruco/ros2_aruco_interfaces/: CMakeLists.txt
src/: beacon.cpp  botInspector.cpp  launchBeacon.cpp  launchInspector.cpp  main.cpp
test/: botInspectorTest.cpp  main.cpp  test.cpp
worlds/: warehouse_layout_1  warehouse_layout_1:Zone.Identifier  warehouse_mini.world
